--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 /* Forum branch styles */
-.section-subtitle {
-    display: flex;
-    margin-left: 35px;
-}
+
 
 .secDon {
     padding-bottom: 0;
